Pre Review 1 Meet Commit

--- a/Filtration.ipynb
+++ b/Filtration.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take the CSV files which have been filtered width-wise and area-wise"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -97,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both CSVs have 80788 rows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -158,6 +172,13 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final filtration step"
    ]
   },
   {
@@ -420,12 +441,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the result in a new CSV file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_df.to_csv('Updated Filtered Layouts.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making a numpy array of the valid floor layouts"
    ]
   },
   {
@@ -727,7 +762,6 @@
     "    lower_bound = mean - std_dev\n",
     "    upper_bound = mean + std_dev\n",
     "\n",
-    "    # Generate a random number within the range\n",
     "    random_number = random.uniform(lower_bound, upper_bound)\n",
     "\n",
     "    print(f\"Random number within one standard deviation: {random_number}\")\n"
